# RP2040_SHT31_LED_USB

./: CMakeLists.txt  README.md
conf/: tusb_config.h
include/: SHT31.h
src/: SHT31.c  main.c
